--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Tiramisu</h1>
+    <p> <img src="./img/tiramisu.jpg" alt="A photo of Tiramisu" width="200" </p>
+    <h3>Description</h3>
+    <p> <strong>Tiramisu</strong> is a classic Italian no-bake dessert made with layers of coffee-soaked ladyfingers and incredible
+        mascarpone cream. The custard-like cream is excellent and contains no raw egg. This easy recipe is truly the
+        best homemade tiramisu and always gets rave reviews.</p>
+    <p>Classic Tiramisu is probably the most iconic Italian treat and this one does not disappoint!</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>40 ladyfingers</li>
+        <li>16 oz mascarpone</li>
+        <li>4 egg yolks</li>
+        <li>1 1/2 cups espresso</li>
+        <li>6 Tbsp golden rum</li>
+        <li>3/4 cup granulated sugar</li>
+        <li>2 cups heavy whipping cream</li>
+        <li>2-3 Tbsp unsweetened cocoa powder</li>
+    </ul>
+    <h3>Preparation</h3>
+    <ol>
+        <li>Quickly dip half of the ladyfingers in coffee syrup and arrange in a 9 by 13 casserole</li>
+        <li>Combine 6 yolks and 3/4 cup sugar and continue whisking over a saucepan of simmering water for 9-10 minutes. Remove from steam and whisk for a few minutes to help it cool cool.</li>
+        <li>Beat 16 oz mascarpone with 3 Tbsp rum then beat in the cooled yolk mixture until blended.</li>
+        <li>Whip 2 cups cold heavy cream to stiff peaks. With a spatula, fold half into the mascarpone mixture then fold in the remaining half until blended.</li>
+        <li>Spread half of the cream over the first layer of ladyfingers. Dip the remaining ladyfingers and arrange over the cream. Spread on remaining cream. Cover and refrigerate overnight then dust with cocoa powder and serve.</li>
+        <li>Enjoy!</li>
+    </ol>
 </body>
+
 </html>
