--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/tiramisu.html">Tiramisu</a>
+    <h1>Italian Desserts</h1>
+    by Romice (totally not grabbed from the BBC, I can't actually cook)
+    <ul>
+    <li><a href="./recipes/panna.html">Panna Cotta</a></li>
+    <li><a href="./recipes/profiterolle.html">Profiterole</a></li>
+    <li><a href="./recipes/tiramisu.html">Tiramisu</a></li>
+    </ul>
 </body>
 </html>
