--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css"
 </head>
+
 <body>
     <h1>Italian Desserts</h1>
-    by Romice (totally not grabbed from the BBC, I can't actually cook)
+    
+    <div class="comment">
+        by Romice (totally not grabbed from the BBC, I can't actually cook)
+    </div>
+    
     <ul>
-    <li><a href="./recipes/panna.html">Panna Cotta</a></li>
-    <li><a href="./recipes/profiterolle.html">Profiterole</a></li>
-    <li><a href="./recipes/tiramisu.html">Tiramisu</a></li>
+    <li class="recipe"><a href="./recipes/panna.html">Panna Cotta</a></li>
+    <li class="recipe"><a href="./recipes/profiterolle.html">Profiterole</a></li>
+    <li class="recipe"><a href="./recipes/tiramisu.html">Tiramisu</a></li>
     </ul>
+
 </body>
 </html>
